# paper-renamer

./: .gitignore  Cargo.toml  README.md  vision.md
src/: filename.rs  llm.rs  main.rs  pdf.rs  renamer.rs  ui.rs
