[package]
name = "paper-renamer"
version = "0.1.0"
edition = "2021"

[dependencies]
pdf-extract = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
indicatif = "0.17"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
